--- a/views/partials/signIn.templ
+++ b/views/partials/signIn.templ
@@ -1,8 +1,9 @@
 package partials
 
-import "n1h41/marketplace/dto"
+import "n1h41/marketplace/internal/model"
 
-templ SignIn(data dto.AdminLoginModel, errors map[string]string) {
+
+templ SignIn(data model.LoginAdminUserRequest, errors map[string]string) {
 	<section id="signin-section" class="bg-white">
 		<div class="lg:grid lg:min-h-screen lg:grid-cols-12">
 			<section class="relative flex h-32 items-end bg-gray-900 lg:col-span-5 lg:h-full xl:col-span-6">
@@ -36,7 +37,6 @@ templ SignIn(data dto.AdminLoginModel, errors map[string]string) {
 				</div>
 			</section>
 			<main
-				id="signin-section"
 				class="flex items-center justify-center px-8 py-8 sm:px-12 lg:col-span-7 lg:px-16 lg:py-12 xl:col-span-6"
 			>
 				<div class="max-w-xl lg:max-w-3xl">
